# GameReviewAppTest

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  docker-compose.prod.yml
backend/: .env.example  Dockerfile.prod  IOS_APP_API_GUIDE.md  README.md  check_db.py  check_real_db.py  clear_tables.py  fix_migrations.py  inspect_db.py  manual_fix_migrations.py  pyproject.toml  pytest.ini  requirements.txt  run_migrations.py  stamp_version.py  start_server.py
backend/alembic/: env.py
backend/alembic/versions/: aaecd3683a34_initial_migration_create_users_table.py  b1f4e2d3c5a6_add_games_table.py  c3f5d7e9b2a4_add_reviews_table.py  f2c5dba7d4da_add_linked_accounts_and_game_library_.py
backend/scripts/: README.md  seed_games.py  simple_seed.py  sync_games.py
backend/src/: __init__.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: __init__.py  auth.py  games.py  reviews.py  social.py
backend/src/core/: __init__.py  config.py  database.py  errors.py  logging.py  security.py
backend/src/models/: __init__.py  friendship.py  game.py  game_library.py  linked_account.py  review.py  user.py
backend/src/repositories/: __init__.py  friendship_repository.py  game_library_repository.py  game_repository.py  linked_account_repository.py  review_repository.py  user_repository.py
backend/src/routes/: oauth_routes.py
backend/src/schemas/: __init__.py  auth.py  game.py  linked_account.py  review.py  social.py
backend/src/services/: __init__.py  auth_service.py  feed_service.py  game_data_service.py  game_service.py  library_sync_service.py  oauth_service.py  oauth_state_manager.py  review_service.py  social_service.py  sync_job_manager.py
backend/src/services/oauth/: playstation_client.py  steam_client.py  xbox_client.py
backend/tests/integration/: __init__.py
backend/tests/integration/test_api/: __init__.py  test_games.py  test_reviews.py
backend/tests/unit/: __init__.py
backend/tests/unit/test_services/: __init__.py  test_auth_service.py  (+2 more)
(+85 files in other folders)
